--- a/page01.html
+++ b/page01.html
@@ -9,16 +9,16 @@
 <body>
     <main>
         <section id="login">
-
+            
             <div id="imagem">
-                foto
+                <!--aqui vai a imagem nas CSS-->
             </div>
 
             <div id="formulario">
                 <h1>Login</h1>
 
                 <p>Seja bem-vindo(a) novamente, faça login para acessar sua conta.</p>
-                
+
                 <form action="login.php" method="post">
 
                 </form>
