--- a/page01.html
+++ b/page01.html
@@ -6,6 +6,7 @@
     <title>Login</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/media-query.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     <main>
@@ -20,8 +21,25 @@
 
                 <p>Seja bem-vindo(a) novamente, faça login para acessar sua conta.</p>
 
-                <form action="login.php" method="post">
+                <form action="login.php" method="post" autocomplete="on">
 
+                    <div class="campo"> <!--email-->
+                        <i class="material-icons">person</i>
+                        <input type="email" name="login" id="ilogin" placeholder="Seu e-mail" autocomplete="email" required maxlength="30">
+                        <label for="ilogin">login</label>
+                    </div>
+
+                    <div class="campo"> <!--senha-->
+                        <i class="material-icons">vpn_key</i>
+                        <input type="password" name="senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" required maxlength="20" minlength="8">
+                        <label for="isenha">senha</label>
+                    </div>
+
+                    <input type="submit" value="Entrar">
+
+                    <a href="esqueci.html">
+                        esqueci a senha <i class="material-icons">mail</i>
+                    </a>
                 </form>
             </div>
 
