formatação do form

--- a/page01.html
+++ b/page01.html
@@ -37,7 +37,7 @@
 
                     <input type="submit" value="Entrar">
 
-                    <a href="esqueci.html">
+                    <a href="esqueci.html" class="botao">
                         esqueci a senha <i class="material-icons">mail</i>
                     </a>
                 </form>
